samples/_failures_safe/1761406153_f8e468_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_433b299f.c: In function ‘main’:
./samples/SAFE/__tmp_433b299f.c:150:13: error: expected declaration or statement at end of input
  150 |             break;
      |             ^~~~~
./samples/SAFE/__tmp_433b299f.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_433b299f.c:150:13: error: expected declaration or statement at end of input
